[gd_scene load_steps=2 format=3 uid="uid://cj3yv7qh8xq5o"]

[ext_resource type="Script" path="res://cutting_minigame/modal_container.gd" id="1_u8xvy"]

[node name="ModalContainer" type="CanvasLayer"]
layer = 100
script = ExtResource("1_u8xvy")

[node name="ModalControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundOverlay" type="ColorRect" parent="ModalControl"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="ContentContainer" type="Control" parent="ModalControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentBackground" type="ColorRect" parent="ModalControl/ContentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.15, 0.15, 1)

[node name="ViewportContainer" type="SubViewportContainer" parent="ModalControl/ContentContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="ModalControl/ContentContainer/ViewportContainer"]
handle_input_locally = false
size = Vector2i(800, 600)
render_target_update_mode = 4
